[package]
name = "riftbound_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
strsim = "0.11.1"

[build-dependencies]
ureq = { version = "2.9.6", features = ["json"] }
